--- a/index.html
+++ b/index.html
@@ -37,30 +37,26 @@
     <div>
     <br>
     <br>
-    <button>inicio</button>
-
-    <button>ofertas</button>
-
-    <button>nacionales</button>
-
-    <button>internacionales</button>
-
-    <button>contactanos</button>
+    <ul class="arriba">
+        <li>inicio</li>
+        <li>ofertas</li>
+        <li>nacionales</li>
+        <li>internacionales</li>
+        <li>contactanos</li>
+    </ul>
 
     <br>
     <br>
 
     </div>
-
-    
-
-    <img src="banner.jpg">
-
     <br>
     <br>
     <br>
      </header>
 
+     <section>
+         <img src="banner.jpg">
+    </section>
     <p class="entrada">
         nuestro tour de viajes ofrece destinos a cualquiera de los 5 continentes , donde te ofrecemos desde paquetes de viaje a cualquier destino del peru y mundo como ofertas de viaje para que te sientas mas comodo o pagues mas barato.
 
