--- a/index.html
+++ b/index.html
@@ -1,111 +1,77 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="es">
 <head>
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="estilos.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="estilos.css">
+  <title>Tour</title>
 </head>
-
- <body>
-<div class="container">
- <header class="cabecera">
-
-  <div class="row">
-
-    <div class="col-sm-4">
+<body>
+  <!-- Header -->
+  <header class="cabecera container">
+    <div class="row">
+      <div class="col-sm-4">
         <img class="logo" src="bhandu.jpg">
-    </div>
-
-    <div class="col-sm-3">
-      <h4 class="principal-T">FOGG TRAVEL</h4>
-    </div>
-
-    <div class="col-sm-5">
-
-    <div class="flexsearch">
-        <div class="flexsearch--wrapper">
+      </div>
+      <div class="col-sm-3">
+        <h4 class="principal-T">FOGG TRAVEL</h4>
+      </div>
+      <div class="col-sm-5">
+        <div class="flexsearch">
+          <div class="flexsearch--wrapper">
             <form class="flexsearch--form" action="#" method="post">
-                <div class="flexsearch--input-wrapper">
-                    <input class="flexsearch--input" type="search" placeholder="search">
-                </div>
-                <input class="flexsearch--submit" type="submit" value="&#10140;"/>
+              <div class="flexsearch--input-wrapper">
+                <input class="flexsearch--input" type="search" placeholder="search">
+              </div>
+              <input class="flexsearch--submit" type="submit" value="&#10140;"/>
             </form>
-        </div>
-    </div>  
+          </div>
+        </div>  
+      </div>
+      <nav class="col-sm-12">
+        <ul class="arriba">
+          <li>ofertas</li>
+          <li>inicio</li>
+          <li>nacionales</li>
+          <li>internacionales</li>
+          <li>contactanos</li>
+        </ul>
+      </nav>
     </div>
-
-    <div>
-    <br>
-    <br>
-    <ul class="arriba">
-        <li>inicio</li>
-        <li>ofertas</li>
-        <li>nacionales</li>
-        <li>internacionales</li>
-        <li>contactanos</li>
-    </ul>
-
-    <br>
-    <br>
-
-    </div>
-    <br>
-    <br>
-    <br>
-     </header>
-
-     <section>
-         <img src="banner.jpg">
-    </section>
+  </header>
+  <!-- Banner -->
+  <section class="banner">
+    <img src="banner.jpg">
     <p class="entrada">
-        nuestro tour de viajes ofrece destinos a cualquiera de los 5 continentes , donde te ofrecemos desde paquetes de viaje a cualquier destino del peru y mundo como ofertas de viaje para que te sientas mas comodo o pagues mas barato.
+      nuestro tour de viajes ofrece destinos a cualquiera de los 5 continentes , donde te ofrecemos desde paquetes de viaje a cualquier destino del peru y mundo como ofertas de viaje para que te sientas mas comodo o pagues mas barato.
 
-        no te vas a arrepentir de esto!.
+      no te vas a arrepentir de esto!.
     </p>
-
+  </section>
+  <!-- Ofertas -->
+  <section class="ofertas container">
     <h3>buscas lugares para turistear en peru? mire unas cuantas ofertas de viaje!</h3>
-  </div>
-
-
-
-  <a href="#">detalle</a>
-
-  <a href="#">detalle</a>
-
-  <a href="#">detalle</a>
-
-  <a href="#">detalle</a>
-
-
-
-  <br>
-  <br>
-
-  <h4>quieres viajar fuera del pais? mira lo que ofrecen algunos de los continentes</h3>
-
-    <div class="container">
-
-    <br>
-    <br>
+    <a href="#">detalle</a>
+    <a href="#">detalle</a>
+    <a href="#">detalle</a>
+    <a href="#">detalle</a>
+  </section>
+  <!-- Continentes -->
+  <section class="continentes">
+    <h4>quieres viajar fuera del pais? mira lo que ofrecen algunos de los continentes</h3>
     <button>america</button>
-
     <button>europa</button>
-
     <button>africa</button>
-
     <button>asia</button>
-
     <button>oceania</button>
-    <br>
-    <br>
-
+  </section>
+  <!-- Footer -->
+  <footer>
     <p class="entrada">
-        regresa pronto a visitarnos!  si quieres viajar cuenta con nosotros y revisa todo lo que quieras
+      regresa pronto a visitarnos!  si quieres viajar cuenta con nosotros y revisa todo lo que quieras
     </p>
-    
-    </div>
-
-</div>    
-            
+  </footer>
 </body>
 </html>
