--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="estilos.css">
-  <title>Tour</title>
+  <title>foggTours!</title>
 </head>
 <body>
   <!-- Header -->
   <header class="cabecera container">
     <div class="row">
       <div class="col-sm-4">
-        <img class="logo" src="bhandu.jpg">
+        <img class="logo" src="logo.jpg">
       </div>
       <div class="col-sm-3">
-        <h4 class="principal-T">FOGG TRAVEL</h4>
+        <h4 class="principal-T">FOGG TOURS!</h4>
       </div>
       <div class="col-sm-5">
         <div class="flexsearch">
@@ -30,48 +30,117 @@
           </div>
         </div>  
       </div>
+
       <nav class="col-sm-12">
-        <ul class="arriba">
-          <li>ofertas</li>
-          <li>inicio</li>
-          <li>nacionales</li>
-          <li>internacionales</li>
-          <li>contactanos</li>
-        </ul>
+          <br><br>
+        <div class="row">
+          <ul class="arriba">
+            <li class="col-sm-2"><a href="ofertas.html">ofertas</a></li>
+            <li class="col-sm-3"><a href="index.html">inicio</a></li>
+            <li class="col-sm-3"><a href="nacionales.html">nacionales</a></li>
+            <li class="col-sm-3"><a href="internacionales.html">internacionales</a></li>
+            <li class="col-sm-3"><a href="contacto.html">contactanos</a></li>
+          </ul>
+        </div>
       </nav>
     </div>
   </header>
   <!-- Banner -->
   <section class="banner">
     <img src="banner.jpg">
+    <br><br><br><br>
     <p class="entrada">
       nuestro tour de viajes ofrece destinos a cualquiera de los 5 continentes , donde te ofrecemos desde paquetes de viaje a cualquier destino del peru y mundo como ofertas de viaje para que te sientas mas comodo o pagues mas barato.
 
       no te vas a arrepentir de esto!.
     </p>
+    <br><br>
   </section>
   <!-- Ofertas -->
   <section class="ofertas container">
-    <h3>buscas lugares para turistear en peru? mire unas cuantas ofertas de viaje!</h3>
-    <a href="#">detalle</a>
-    <a href="#">detalle</a>
-    <a href="#">detalle</a>
-    <a href="#">detalle</a>
+    <h3>buscas lugares para turistear? mire unas cuantas ofertas de viaje!</h3>
+    <br><br><br>
+    <div class="row">
+      <div class="col-sm-7">
+      <img src="brasil.jpg">
+      <a href="#">ver detalles</a>
+      </div>
+      <br>
+      <div class="col-sm-5">
+      <img src="toronto.png">
+      <a href="#">ver detalles</a>
+      </div>
+    </div>
+      <br>
+    <div class="row">
+      <div class="col-sm-7">
+      <img src="paris.png">
+      <a href="#">ver detalles</a>
+      </div>
+      <br>
+      <div class="col-sm-5">
+        <img src="moscu.png">
+      <a href="#">ver detalles</a>
+      </div>
+    </div>
   </section>
   <!-- Continentes -->
+  <br><br><br>
   <section class="continentes">
-    <h4>quieres viajar fuera del pais? mira lo que ofrecen algunos de los continentes</h3>
-    <button>america</button>
-    <button>europa</button>
-    <button>africa</button>
-    <button>asia</button>
-    <button>oceania</button>
+    <h4>quieres viajar fuera del pais? mira lo que ofrecen algunos de los continentes</h4>
+    <br><br>
+    <nav class="col-sm-12">
+      <div class="row">
+          <ul class="arriba">
+            <li class="col-sm-2"><a href="internacionales.html">america</a></li>
+            <li class="col-sm-3"><a href="europa.html">europa</a></li>
+            <li class="col-sm-3"><a href="africa.html">africa</a></li>
+            <li class="col-sm-3"><a href="asia.html">asia</a></li>
+            <li class="col-sm-3"><a href="oceania.html">oceania</a></li>
+          </ul>
+        </div>
+    </nav>
   </section>
   <!-- Footer -->
   <footer>
     <p class="entrada">
       regresa pronto a visitarnos!  si quieres viajar cuenta con nosotros y revisa todo lo que quieras
     </p>
+    <br><br><br>
+
+    <div class="row">
+      <div class="col-sm-9">
+      <p class="copyright">
+      © copyright 2022 for tours de viaje
+      </p>
+      </div>
+
+      <div class="iconos col-sm-3">
+      <i class="fa-brands fa-facebook">
+      <img src="facebook.svg">
+      </i>
+      </div>
+
+      <div class="iconos col-sm-3">
+      <i class="fa-brands fa-twitter">
+        <img src="twitter.svg">
+      </i>
+      </div>
+
+      <div class="iconos col-sm-3">
+        <i class="fa-brands fa-instagram">
+          <img src="instagram.svg">
+        </i>
+      </div>
+
+      <div class="iconos col-sm-3">
+        <i class="fa-brands fa-youtube">
+          <img src="youtube.svg">
+        </i>
+      </div>
+      
+    </div>
+
   </footer>
 </body>
 </html>
